# lmake_lines_of_code

./: Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json
.github/workflows/: rust.yml
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/doc/: search-index.js  settings.html  source-files.js
docs/doc/lmake_lines_of_code/: fn.enable_ansi_support.html  fn.main.html  index.html
docs/implementors/lmake_lines_of_code/: trait.TraitCountLines.js
docs/lmake_lines_of_code/: all.html  fn.as_md_table.html  fn.as_shield_badges.html  fn.enable_ansi_support.html  fn.include_into_readme_md.html  fn.main.html  fn.readme_include.html  fn.traverse_dir_with_exclude_dir.html  fn.workspace_or_project_count_lines.html  index.html  sidebar-items.js  struct.AppObject.html  struct.LinesOfCode.html  struct.MockTraitCountLines.html  struct.MockTraitCountLines_TraitCountLines.html  trait.TraitCountLines.html
docs/lmake_lines_of_code/count_lines_mod/: enum.SpecialFolder.html  fn.as_md_table.html  fn.as_shield_badges.html  fn.count_lines.html  fn.one_project_count_lines.html  fn.workspace_or_project_count_lines.html  index.html  sidebar-items.js  struct.CargoToml.html  struct.LinesOfCode.html  struct.Workspace.html
docs/lmake_lines_of_code/readme_include_mod/: fn.include_into_readme_md.html  fn.readme_include.html  index.html  sidebar-items.js
docs/lmake_lines_of_code/utilsmod/: index.html  sidebar-items.js  (+2 more)
examples/: t1.html  t3.xml
src/: count_lines_mod.rs  lib.rs  main.rs  readme_include_mod.rs  utilsmod.rs
tests/: test_01.rs
(+29 files in other folders)
