[package]
name = "lmake_lines_of_code"
version = "1.1.5"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "Lines of code for Rust projects"
repository = "https://github.com/LucianoBestia/lmake_lines_of_code"
readme = "README.md"
license = "MIT"
keywords = ["rust", "make"]
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
unwrap = "1.2.1"
clap = "2.33.0"
ansi_term = "0.12.0"
glob = "0.3.0"
regex = "1.3.6"
lazy_static="1.4.0"
toml = "0.5.6"
serde ="1.0.111"
serde_derive="1.0.111"
cfg-if = "0.1.10"
mockall = "0.7.1"
anyhow="1.0.32"

[dev-dependencies]
